@@ -5,6 +5,13 @@
 	here and use a type with proper overflow behavior for types that would
 	need to be promoted for the arithmetic.
 
+2012-11-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR sanitizer/55435
+	* c-common.c (handle_no_address_safety_analysis_attribute): New
+	function.
+	(c_common_attribute_table): Add no_address_safety_analysis.
+
 2012-04-11  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR target/52624
