@@ -1,3 +1,8 @@
+2012-11-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR sanitizer/55435
+	* c-c++-common/asan/attrib-1.c: New test.
+
 2012-11-17  Jakub Jelinek  <jakub@redhat.com>
 
 	* lib/asan-dg.exp (asan_symbolize): Prune BFD: prefixed error messages
